----------------------------------------------------------------------
 OmegaT 2.5.0
----------------------------------------------------------------------
   5 Enhancements
   0 Bug fix
   1 Localisation update
----------------------------------------------------------------------
2.5.0 vs. 2.3.0

  Implemented requests:

  - Multiple translation support
  http://sourceforge.net/support/tracker.php?aid=1922026

  - Run scripts in OmegaT
  http://sourceforge.net/support/tracker.php?aid=3382006
  
  - View/edit notes on translation units (restore main window to see notes pane)
  http://sourceforge.net/support/tracker.php?aid=3404301
  
  - Project-specific file filters
  http://sourceforge.net/support/tracker.php?aid=3404303
  
  - Project-specific segmentation rules
  http://sourceforge.net/support/tracker.php?aid=3405056

  Other enhancements:

  - Changes in TM/ are detected automatically every second. The
modified TMX are reloaded in memory transparently, without having to
reload the project.

  - Wordfast TXML filter. Only target segments are read, so it
it is mostly useful for files where source = target.

  Localisation updates:

  - Dutch localisation updated to 2.5 (UI)

----------------------------------------------------------------------
 OmegaT 2.3.0 update 2
----------------------------------------------------------------------
   1 Enhancement
   2 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.3.0 update 2 vs. 2.3.0 update 1

  Other enhancements:

  - Apertium : remove '*' before unknown words (including tags)
  
  Bug fixes:

  - Pipe-sign | missing from fields when copy-pasting
  http://sourceforge.net/support/tracker.php?aid=3395795

  - Parse exception in the LaTeX filter

  Localisation updates:  
  - Spanish localisation updated to 2.3 (UI, documentation, readme)

----------------------------------------------------------------------
 OmegaT 2.3.0 update 1