@@ -1290,6 +1290,10 @@ GUI_NOTESWINDOW_SUBWINDOWTITLE_Notes=Notes
 
 GUI_NOTESWINDOW_explanation=Select an entry to view, add, remove or edit a translation unit note. A note is just a comment regarding this set of source text and translation.
 
+GUI_COMMENTSWINDOW_SUBWINDOWTITLE_Comments=Comments
+
+GUI_COMMENTSWINDOW_explanation=Select an entry to view comments if they exist in the source file and the file filter supports it (e.g. PO-filter).
+
 # 0 - filename
 GUI_SUBWINDOWTITLE_Editor=Editor - {0}
 
@@ -1495,3 +1499,12 @@ SCW_CLOSE=&Quit
 SCW_LIST_ENGINES=Available script engines:
 SCW_BEAN_ERROR=ERROR: (declaring bean)
 SCW_SCRIPT_LOADED={0} loaded.
+
+# PO-Filter
+POFILTER_TRANSLATOR_COMMENTS=Comments by translator
+POFILTER_EXTRACTED_COMMENTS=Extracted comments
+POFILTER_REFERENCES=References
+
+# HTML-Filter
+HTMLFILTER_TAG=Tag
+HTMLFILTER_ATTRIBUTE=Atrribute
