@@ -1,0 +1,11 @@
+package org.omegat.gui.comments;
+
+public class Comments {
+    
+    public String comments;
+    
+    public Comments(String comments) {
+        this.comments = comments;
+    }
+
+}
